@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-06-15T12:34:45Z",
-  "count_outdated" : 7829,
-  "uniques_outdated" : 3442,
+  "timestamp" : "2024-06-16T12:34:58Z",
+  "count_outdated" : 7831,
+  "uniques_outdated" : 3443,
   "count" : 8022,
   "uniques" : 3531,
   "clones" : [
-    {
-      "timestamp": "2024-06-02T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-06-03T00:00:00Z",
       "count": 15,
