@@ -1,12 +1,7 @@
 {
-  "count": 193,
+  "count": 191,
   "uniques": 69,
   "clones": [
-    {
-      "timestamp": "2024-06-02T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-06-03T00:00:00Z",
       "count": 15,
