@@ -1,3 +1,12 @@
+2024-06-16T12:34:58Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9536003551 # 349
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-16
+* notice: last 14d: unq all: 69 191
+* notice: prev accum: outdated-unq outdated-all / unq all: 3442 7829 / 3531 8022
+* notice: next accum: outdated-unq outdated-all / unq all: 3443 7831 / 3531 8022
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-06-02] / []
+
 2024-06-15T12:34:45Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9528103955 # 347
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-15
